<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AboutActivity"
    android:orientation="vertical">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/app_bar_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


    <Toolbar
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#BCBCBC">

        <TextView
            android:id="@+id/app_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/joy_weather_app"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="bold" />
    </Toolbar>

    <ImageView
        android:id="@+id/joy_image"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:contentDescription="@string/joybrata_paul"
        android:scaleType="centerCrop"
        android:src="@drawable/joy_image" />

    <TextView
        android:id="@+id/joy_weather_app_description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="50dp"
        android:background="#FFFFFF"
        android:text="@string/developer_description"
        android:textColor="#323232"
        android:textSize="16sp"
        android:textStyle="bold|italic" />

    </com.google.android.material.appbar.AppBarLayout>


</LinearLayout>