<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/main_bg"
        android:orientation="vertical"
        tools:context=".MainActivity">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20sp"
            android:orientation="vertical"
            android:padding="20sp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tv_city"
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-black"
                    android:text="@string/city_name"
                    android:textColor="#fff"
                    android:textSize="25sp" />

                <com.google.android.material.floatingactionbutton.FloatingActionButton
                    android:id="@+id/fab_search"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_marginStart="100dp"
                    android:layout_marginEnd="100dp"
                    android:contentDescription="@string/searching_city_weather_information"
                    android:src="@drawable/round_search_24"
                    app:backgroundTint="@color/white" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tv_temp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="casual"
                    android:text="@string/_10"
                    android:textColor="#fff"
                    android:textSize="50sp" />

                <TextView
                    android:id="@+id/temperature_degree"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="casual"
                    android:padding="10dp"
                    android:text="@string/centigrade"
                    android:textColor="#fff"
                    android:textSize="50sp" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_gravity="bottom"
                    android:padding="10dp">

                    <TextView
                        android:id="@+id/date"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/date"
                        android:fontFamily="casual"
                        android:textSize="20sp"
                        android:textColor="#fff"/>

                    <TextView
                        android:id="@+id/weekday"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/weekday"
                        android:fontFamily="casual"
                        android:textSize="20sp"
                        android:textColor="#fff"/>

                </LinearLayout>

                <TextView
                    android:id="@+id/weather_type"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="15dp"
                    android:fontFamily="casual"
                    android:text="@string/weather_type"
                    android:textColor="#fff"
                    android:textSize="20sp"/>


            </LinearLayout>

        </LinearLayout>

        <ImageView
            android:id="@+id/weather_image"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_gravity="center"
            android:layout_marginTop="20sp"
            android:contentDescription="@string/weather_details_image"
            android:src="@drawable/weather_forecast" />

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="30sp"
            app:cardBackgroundColor="#0ED2F7"
            app:cardCornerRadius="10dp"
            app:cardElevation="10dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20sp"
                android:layout_marginBottom="20sp"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:gravity="center"
                    android:orientation="horizontal"
                    android:weightSum="5">

                    <ImageView
                        android:id="@+id/image_1"
                        android:layout_width="20sp"
                        android:layout_height="20sp"
                        android:layout_weight="0.5"
                        android:contentDescription="@string/forecast_icon_1"
                        android:src="@drawable/weather_forecast" />

                    <TextView
                        android:id="@+id/weekday_1"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="15dp"
                        android:layout_weight="3"
                        android:fontFamily="casual"
                        android:text="@string/weekday"
                        android:textColor="#fff"
                        android:textSize="20sp" />

                    <TextView
                        android:id="@+id/temp_1"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="15dp"
                        android:layout_weight="1"
                        android:fontFamily="casual"
                        android:text="22/14"
                        android:textColor="#fff"
                        android:textSize="20sp" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:gravity="center"
                    android:orientation="horizontal"
                    android:weightSum="5">

                    <ImageView
                        android:id="@+id/image_2"
                        android:layout_width="20sp"
                        android:layout_height="20sp"
                        android:layout_weight="0.5"
                        android:contentDescription="@string/forecast_icon_2"
                        android:src="@drawable/weather_forecast" />

                    <TextView
                        android:id="@+id/weekday_2"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="15dp"
                        android:layout_weight="3"
                        android:fontFamily="casual"
                        android:text="@string/weekday"
                        android:textColor="#fff"
                        android:textSize="20sp" />

                    <TextView
                        android:id="@+id/temp_2"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="15dp"
                        android:layout_weight="1"
                        android:fontFamily="casual"
                        android:text="22/14"
                        android:textColor="#fff"
                        android:textSize="20sp" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:gravity="center"
                    android:orientation="horizontal"
                    android:weightSum="5">

                    <ImageView
                        android:id="@+id/image_3"
                        android:layout_width="20sp"
                        android:layout_height="20sp"
                        android:layout_weight="0.5"
                        android:contentDescription="@string/forecast_icon_3"
                        android:src="@drawable/weather_forecast" />

                    <TextView
                        android:id="@+id/weekday_3"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="15dp"
                        android:layout_weight="3"
                        android:fontFamily="casual"
                        android:text="@string/weekday"
                        android:textColor="#fff"
                        android:textSize="20sp" />

                    <TextView
                        android:id="@+id/temp_3"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="15dp"
                        android:layout_weight="1"
                        android:fontFamily="casual"
                        android:text="22/14"
                        android:textColor="#fff"
                        android:textSize="20sp" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:gravity="center"
                    android:orientation="horizontal"
                    android:weightSum="5">

                    <ImageView
                        android:id="@+id/image_4"
                        android:layout_width="20sp"
                        android:layout_height="20sp"
                        android:layout_weight="0.5"
                        android:contentDescription="@string/forecast_icon_4"
                        android:src="@drawable/weather_forecast" />

                    <TextView
                        android:id="@+id/weekday_4"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="15dp"
                        android:layout_weight="3"
                        android:fontFamily="casual"
                        android:text="@string/weekday"
                        android:textColor="#fff"
                        android:textSize="20sp" />

                    <TextView
                        android:id="@+id/temp_4"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="15dp"
                        android:layout_weight="1"
                        android:fontFamily="casual"
                        android:text="22/14"
                        android:textColor="#fff"
                        android:textSize="20sp" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:gravity="center"
                    android:orientation="horizontal"
                    android:weightSum="5">

                    <ImageView
                        android:id="@+id/image_5"
                        android:layout_width="20sp"
                        android:layout_height="20sp"
                        android:layout_weight="0.5"
                        android:contentDescription="@string/forecast_icon_4"
                        android:src="@drawable/weather_forecast" />

                    <TextView
                        android:id="@+id/weekday_5"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="15dp"
                        android:layout_weight="3"
                        android:fontFamily="casual"
                        android:text="@string/weekday"
                        android:textColor="#fff"
                        android:textSize="20sp" />

                    <TextView
                        android:id="@+id/temp_5"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="15dp"
                        android:layout_weight="1"
                        android:fontFamily="casual"
                        android:text="22/14"
                        android:textColor="#fff"
                        android:textSize="20sp" />

                </LinearLayout>

            </LinearLayout>

        </androidx.cardview.widget.CardView>

    </LinearLayout>
    <com.google.android.material.navigation.NavigationView
        android:id="@+id/nav_view"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:text="Hello World!"
        android:layout_gravity="start"
        app:headerLayout="@layout/drawer_header"
        app:menu="@menu/drawer_menu"/>

</androidx.drawerlayout.widget.DrawerLayout>